infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - path: /posts/create
            backend:
              serviceName: posts-clusterip-srv
              servicePort: 4000
          - path: /posts
            backend:
              serviceName: query-srv
              servicePort: 4002
          - path: /posts/?(.*)/comments
            backend:
              serviceName: comments-srv
              servicePort: 4001
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 3000
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   annotations:
#     service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
#     service.beta.kubernetes.io/do-loadbalancer-hostname: 'posts.com'
#   labels:
#     helm.sh/chart: ingress-nginx-2.0.3
#     app.kubernetes.io/name: ingress-nginx
#     app.kubernetes.io/instance: ingress-nginx
#     app.kubernetes.io/version: 0.32.0
#     app.kubernetes.io/managed-by: Helm
#     app.kubernetes.io/component: controller
#   name: ingress-nginx-controller
#   namespace: ingress-nginx
# spec:
#   type: LoadBalancer
#   externalTrafficPolicy: Local
#   ports:
#     - name: http
#       port: 80
#       protocol: TCP
#       targetPort: http
#     - name: https
#       port: 443
#       protocol: TCP
#       targetPort: https
#   selector:
#     app.kubernetes.io/name: ingress-nginx
#     app.kubernetes.io/instance: ingress-nginx
#     app.kubernetes.io/component: controller
# ---
#   apiVersion: v1
#   kind: Service
#   metadata:
#     annotations:
#       service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
#       service.beta.kubernetes.io/do-loadbalancer-hostname: 'www.ticketing-app-prod.xyz'
#     labels:
#       helm.sh/chart: ingress-nginx-2.0.3
#         app.kubernetes.io/name: ingress-nginx
#         app.kubernetes.io/instance: ingress-nginx
#         app.kubernetes.io/version: 0.32.0
#         app.kubernetes.io/managed-by: Helm
#         app.kubernetes.io/component: controller
#       name: ingress-nginx-controller
#       namespace: ingress-nginx
#     spec:
#       type: LoadBalancer
#       externalTrafficPolicy: Local
#       ports:
#         - name: http
#           port: 80
#           protocol: TCP
#           targetPort: http
#         - name: https
#           port: 443
#           protocol: TCP
#           targetPort: https
#       selector:
#         app.kubernetes.io/name: ingress-nginx
#         app.kubernetes.io/instance: ingress-nginx
#         app.kubernetes.io/component: controller
